@@ -1,3 +1,7 @@
+* 2014-06-04 - thorben.betten@open-xchange.com
+
+ - Fix for bug 32899: Let 'Capability' class implement java.io.Serializable marker interface
+
 * 2014-06-03 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 32809: Workaround to negate boolean false filters for ldap
